# openapi.yaml
@@ -3,19 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: Upload API
+    title: MediaService API
     version: 0.0.1
 paths:
-    /v1/media/avatar:
+    /v1/media:
         post:
             tags:
-                - Upload
-            operationId: Upload_UploadAvatar
+                - MediaService
+            operationId: MediaService_UploadMedia
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.upload.v1.UploadMediaRequest'
+                            $ref: '#/components/schemas/api.media.v1.UploadMediaRequest'
                 required: true
             responses:
                 "200":
@@ -23,31 +23,16 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.upload.v1.MediaReply'
-    /v1/media/upload:
-        post:
-            tags:
-                - Upload
-            operationId: Upload_UploadMedia
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.upload.v1.UploadMediaRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.upload.v1.MediaReply'
+                                $ref: '#/components/schemas/api.media.v1.MediaReply'
 components:
     schemas:
-        api.upload.v1.Media:
+        api.media.v1.Media:
             type: object
             properties:
                 id:
+                    type: integer
+                    format: int64
+                ownerId:
                     type: integer
                     format: int64
                 url:
@@ -68,12 +53,12 @@ components:
                 duration:
                     type: number
                     format: float
-        api.upload.v1.MediaReply:
+        api.media.v1.MediaReply:
             type: object
             properties:
                 media:
-                    $ref: '#/components/schemas/api.upload.v1.Media'
-        api.upload.v1.UploadMediaRequest:
+                    $ref: '#/components/schemas/api.media.v1.Media'
+        api.media.v1.UploadMediaRequest:
             type: object
             properties:
                 content:
@@ -81,4 +66,4 @@ components:
                 fileName:
                     type: string
 tags:
-    - name: Upload
+    - name: MediaService
